--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^16.5.0",
     "esm": "^3.2.25",
     "express": "5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.9",
     "pg": "^8.14.1",
     "sequelize": "^6.37.7"
   },
