--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "5.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.9",
     "pg": "^8.14.1",
